Update index.html & about.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="welcome-section">
         <div class="container">
             <h2>Bienvenue sur le Portail SIIA</h2>
-            <p>Système Informatique et Intelligence Artificielle</p>
+            <p>Système Information et Intelligence Artificielle</p>
             <a href="pages/modules.html" class="enter-button">Accéder au système</a>
         </div>
     </div>
