--- a/pages/about.html
+++ b/pages/about.html
@@ -35,7 +35,7 @@
             <div class="about-content">
                 <section class="about-card">
                     <h3>Notre Mission</h3>
-                    <p>Le programme Système Informatique et Intelligence Artificielle (SIIA) vise à former des professionnels compétents dans les domaines de l'informatique et de l'intelligence artificielle. Notre objectif est de préparer les étudiants aux défis technologiques actuels et futurs.</p>
+                    <p>Le programme Système Information et Intelligence Artificielle (SIIA) vise à former des professionnels compétents dans les domaines de l'informatique et de l'intelligence artificielle. Notre objectif est de préparer les étudiants aux défis technologiques actuels et futurs.</p>
                 </section>
 
                 <section class="about-card">
@@ -43,7 +43,7 @@
                     <ul>
                         <li>Développer des compétences techniques avancées en programmation</li>
                         <li>Maîtriser les concepts fondamentaux de l'intelligence artificielle</li>
-                        <li>Acquérir une expertise en développement de systèmes informatiques</li>
+                        <li>Acquérir une expertise en développement de systèmes Informations</li>
                         <li>Promouvoir l'innovation et la recherche dans le domaine</li>
                     </ul>
                 </section>
